bkmonitor/webpack/src/fta-solutions/pages/event/event-detail/aiops/troubleshooting-collapse.scss
.aiops-troubleshooting {
  position: relative;
  width: 100%;
  height: 100%;

  .blue-txt {
    color: #3a84ff;
  }

  .aiops-troubleshooting-info {
    width: 100%;
    padding: 12px 16px;
    margin: 8px 0;
    font-size: 12px;
    background: #ffffff;
    border-radius: 2px;
    box-shadow: 0 2px 4px 0 #1919290d;

    .info-title {
      margin-bottom: 5px;
      font-size: 13px;
      color: #313238;
    }

    .info-item {
      display: flex;
      line-height: 28px;

      .info-label,
      .info-txt {
        display: block;
      }

      .info-txt {
        flex: 1;
      }

      .info-label {
        width: 62px;
      }
    }

    .info-status {
      display: inline-block;
      height: 18px;
      line-height: 18px;
      color: #e71818;
      border-radius: 2px;

      .icon-monitor {
        margin-right: 2px;
        font-size: 14px;
      }
    }
  }
  .topo_loading {
    width: 100%;
    height: 100%;
  }
  .aiops-troubleshooting-topo {
    width: 100%;
    height: 460px;
    margin-bottom: 16px;
    background: #37383b;
    border-radius: 2px;
  }

  .aiops-topo-zoom-image {
    /* stylelint-disable-next-line declaration-no-important */
    display: none !important;
    width: 100%;
    opacity: 0;
  }
}

